--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ go:
 services:
 
 before_install:
-# - go get github.com/mattn/goveralls
+ - sleep 15
+ - go get golang.org/x/tools/cmd/vet
+ - go get golang.org/x/tools/cmd/cover
+ - go get github.com/golang/lint/golint
+ - go get github.com/mattn/goveralls
 
 script:
  - go vet -x ./...
@@ -13,6 +17,3 @@ script:
  - go test -v ./...
  - go test -covermode=count -coverprofile=profile.cov .
  - go tool cover -func=profile.cov
-
-#after_script:
-#- $HOME/gopath/bin/goveralls -coverprofile=profile.cov -service=travis-ci
