--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,12 @@ go:
 services:
 
 before_install:
- - sleep 15
- - go get golang.org/x/tools/cmd/vet
- - go get golang.org/x/tools/cmd/cover
+ - sleep 5
  - go get github.com/golang/lint/golint
- - go get github.com/mattn/goveralls
 
 script:
  - go vet -x ./...
  - $HOME/gopath/bin/golint ./...
  - go test -v ./...
- - go test -covermode=count -coverprofile=profile.cov .
+ - go test -covermode=count -coverprofile=profile.cov ./...
  - go tool cover -func=profile.cov
