--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 before_install:
  - sleep 5
  - go get ./...
- - go get github.com/golang/lint/golint
+ - go get golang.org/x/lint/golint
 
 script:
  - go vet -x ./...
